--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/pusooy.github.io" # the base URL of your site, e.g. '/blog' or '/pusooy.github.io'
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
